Merged with develop-SweetHome3DJS-6.4.2 branch